hermes_fuzz_executed_few_shot_v2/fuzz_49_execution
'use strict';

Array.prototype.some.call([23], function (_ref) {
  var 0 = _ref;
  return true;
}) === true;


Execution Output ------------------:
test.js:4:7: error: 'identifier' expected in declaration
  var 0 = _ref;
  ~~~~^
